--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,11 @@
 body {
-    padding-top: 50px;
+    padding-top: 80px;
 }
 .starter-template {
-    padding: 40px 15px;
+    /*padding: 40px 15px;*/
 }
+
+.main-container {
+    /*margin-top: 50px;*/
+}
+
