--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -14,6 +14,7 @@ body {
 .top10 { margin-top:10px; }
 .top15 { margin-top:15px; }
 .top17 { margin-top:17px; }
+.top20 { margin-top:20px; }
 .top30 { margin-top:30px; }
 
 
