--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -25,7 +25,13 @@ body {
 .txt13{ font-size: 92.5%; }
 
 div#events-container .panel {
-    height: 295px;
+    height: 304px;
+}
+
+.white { color: #ffffff }
+
+.user-secret {
+    padding-top: 12px;
 }
 
 
