--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 80px;
+    background-color: #eee;
 }
 .starter-template {
     /*padding: 40px 15px;*/
@@ -24,8 +25,8 @@ body {
 .txt11{ font-size: 80%;}
 .txt13{ font-size: 92.5%; }
 
-div#events-container .panel {
-    height: 304px;
+.img-event-item {
+    width: 100%;
 }
 
 .white { color: #ffffff }
