--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 80px;
+    padding-top: 10px;
     background-color: #eee;
 }
 .starter-template {
@@ -55,3 +55,11 @@ body {
     text-align: right;
 }
 
+.navbar-right {
+    margin-right: 0px;
+}
+
+.footer {
+    margin-top: 50px;
+    text-align: center;
+}
