--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -17,6 +17,8 @@ body {
 .top17 { margin-top:17px; }
 .top20 { margin-top:20px; }
 .top30 { margin-top:30px; }
+.top40 { margin-top:40px; }
+.top50 { margin-top:50px; }
 
 .align-with-text {
     vertical-align: text-bottom;
