--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -28,7 +28,7 @@ body {
 .txt13{ font-size: 92.5%; }
 
 .img-event-item {
-    width: 100%;
+    width: 75px;
 }
 
 .white { color: #ffffff }
@@ -53,10 +53,6 @@ body {
     margin-bottom: 0;
 }
 
-.align-right {
-    text-align: right;
-}
-
 .navbar-right {
     margin-right: 0px;
 }
@@ -66,6 +62,12 @@ body {
     text-align: center;
 }
 
-.event-item {
+.list-group-item {
+    margin-bottom: 8px;
+    height: 100px;
+}
+
+.row-list {
+    margin-left: -30px;
 }
 
