--- a/public/css/rdv_home.css
+++ b/public/css/rdv_home.css
@@ -1,11 +1,5 @@
 body {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background: url('/img/drinks.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+
 }
 
 .form-signup {
@@ -56,5 +50,10 @@ body {
     top:0;
 }
 
+.top80 { margin-top:80px; }
 .top40 { margin-top:40px; }
 .top30 { margin-top:30px; }
+
+.right20 {margin-right: 20px; }
+
+.img-activity {width: 150px; }
