--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -63,7 +63,6 @@ body {
 
 .list-group-item {
     margin-bottom: 8px;
-    height: 100px;
 }
 
 .row-list {
@@ -83,6 +82,7 @@ body {
 }
 
 .marg-top5 {margin-top: 5px}
+.marg-bot5 {margin-bottom: 5px}
 
 dl.participants {
     margin-bottom: 5px;
