--- a/public/css/rdv_home.css
+++ b/public/css/rdv_home.css
@@ -53,10 +53,11 @@ body {
 .top80 { margin-top:80px; }
 .top40 { margin-top:40px; }
 .top30 { margin-top:30px; }
+.top20 { margin-top:20px; }
 
 .right20 {margin-right: 20px; }
 
-.img-activity {width: 200px; }
+.img-activity {width: 200px;}
 
 .fv-form-bootstrap .fv-icon-no-label {
     top: -10px;
