manage network and facebook share

--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -95,3 +95,11 @@ div.panel-title {
 .pad-left0 {
     padding-left: 0;
 }
+
+.media-left, .media > .pull-left {
+    padding-right: 5px;
+}
+
+.panel-body {
+    padding: 5px;
+}
