new profile page

--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -103,3 +103,10 @@ div.panel-title {
 .panel-body {
     padding: 5px;
 }
+
+.right5 {margin-right: 5px }
+.right10 {margin-right: 10px }
+.right15 {margin-right: 15px }
+.right20 {margin-right: 20px }
+.right30 {margin-right: 30px }
+.right40 {margin-right: 40px }
