--- a/public/css/rdv_app.css
+++ b/public/css/rdv_app.css
@@ -20,6 +20,16 @@ body {
 .top40 { margin-top:40px; }
 .top50 { margin-top:50px; }
 
+.bottom5 { margin-bottom:5px; }
+.bottom7 { margin-bottom:7px; }
+.bottom10 { margin-bottom:10px; }
+.bottom15 { margin-bottom:15px; }
+.bottom17 { margin-bottom:17px; }
+.bottom20 { margin-bottom:20px; }
+.bottom30 { margin-bottom:30px; }
+.bottom40 { margin-bottom:40px; }
+.bottom50 { margin-bottom:50px; }
+
 .align-with-text {
     vertical-align: text-bottom;
 }
